fix convention.html overflow

--- a/public/stylesheets/convention/index.css
+++ b/public/stylesheets/convention/index.css
@@ -6,4 +6,5 @@ pre {
     margin-left: 18px;
     background-color: rgba(33, 150, 243, .12);
     padding: 16px;
+    overflow-x: auto;
 }
